# InfMoE

./: .clang-format  .editorconfig  .gitignore  LICENSE  README.md  requirements.txt
plugin/: Makefile  MoELayerPlugin.cc  MoELayerPlugin.h  MoELayerPluginCreator.cc  SubLayer.h  meson.build  meson_options.txt  utility.h
plugin/cuda/: common.cuh  moe.cu  moe.h  ops.h
plugin/cuda/ops/: gelu.cu  layernorm.cu
plugin/kernels/: gelu.cu  kernels.h  layernorm.cu  ops.h
plugin/kernels/ops/: gelu.cu
plugin/sublayers/: IdentityLayer.hh  SubLayer.h  T5FFLayer.cc  T5FFLayer.h
python/: requirements.txt  setup.py
python/examples/: common.py  generate_onnx.py  parse_and_concat_network.py  stacked_moe.py  two_moe_layers.py
python/infmoe/: config.py  plugin.py
python/trt_moe/: __init__.py  plugin.py  utils.py
tests/: test_plugin.py
